@@ -1,0 +1,3 @@
+# Exim filter
+
+unseen noerror deliver usery@domain1
