@@ -1,0 +1,3 @@
+# Exim filter
+
+unseen deliver usery@domain1
